--- a/requirements.txt
+++ b/requirements.txt
@@ -12,16 +12,21 @@ Django==5.0.6
 django-allauth==0.63.3
 django-cleanup==8.1.0
 django-htmx==1.17.3
+flower==2.0.1
 frozenlist==1.4.1
+humanize==4.9.0
 idna==3.7
 kombu==5.3.7
 multidict==6.0.5
 pillow==10.3.0
+prometheus_client==0.20.0
 prompt_toolkit==3.0.46
 python-dateutil==2.9.0.post0
+pytz==2024.1
 redis==5.0.5
 six==1.16.0
 sqlparse==0.5.0
+tornado==6.4.1
 tzdata==2024.1
 vine==5.1.0
 wcwidth==0.2.13
